Added Create and Edit Teacher
Updated `CreateTeacher` and `UpdateTeacher` methods in `TeachersController.cs` to accept `CreateUserRoleDto<TeacherDto>`. Modified `ITeacherService` and `IApiTeacherService` interfaces to reflect new method signatures. Enhanced `TeacherService.cs` to handle user role logic during teacher creation and updates. Changed `TeacherDto` properties to non-nullable for better data integrity. Introduced `CreateUserRoleBaseComponent.cs` for user role management in UI components. Updated forms and view models to integrate new logic and validation attributes.

--- a/src/Gradebook/Gradebook.Web/Components/Pages/Administator/ManageTeachers/CreateTeacher.razor
+++ b/src/Gradebook/Gradebook.Web/Components/Pages/Administator/ManageTeachers/CreateTeacher.razor
@@ -1,6 +1,7 @@
 ﻿@page "/manage-teachers/create"
 @inherits ExtendedComponentBase
 
-<Form ViewModel="@ViewModel"
+<Form ViewModel="ViewModel"
+      IsCreate="true" 
       PageTitle="Create Teacher"
-      OnValidSubmit="ValidSubmitHandler" />
+      OnValidSubmit="ValidSubmitHandler"/>
