--- a/src/Gradebook/Gradebook.Web/Components/Layout/NavMenu.razor
+++ b/src/Gradebook/Gradebook.Web/Components/Layout/NavMenu.razor
@@ -39,7 +39,7 @@
                 @*Headmaster only*@
                 <MudNavLink Href="">Manage Classes</MudNavLink>
                 @*Headmaster only*@
-                <MudNavLink Href="">Manage Timetable</MudNavLink>
+                <MudNavLink Href="/manage-timetables">Manage Timetable</MudNavLink>
             </ChildContent>
         </MudExpansionPanel>
     </span>
