--- a/src/Gradebook/Gradebook.Web/Components/Pages/Dashboard/Dashboard.razor
+++ b/src/Gradebook/Gradebook.Web/Components/Pages/Dashboard/Dashboard.razor
@@ -39,7 +39,7 @@
             <MudItem xs="12" sm="6" md="3">
                 <MudPaper Class="pa-4" Elevation="3">
                     <MudText Typo="Typo.h6">Grades</MudText>
-                    <MudText Style="@(averageGrade == 2 ? $"color:{Colors.Red.Default}" : averageGrade > 4 ? $"color:{Colors.Green.Default}" : $"color:{Colors.Orange.Default}")" Typo="Typo.subtitle1">Avgerage: @avgGradeString</MudText>
+                    <MudText Style="@(averageGrade == 2 ? $"color:{Colors.Red.Default}" : averageGrade > 4 ? $"color:{Colors.Green.Default}" : $"color:{Colors.Orange.Default}")" Typo="Typo.subtitle1">Average: @avgGradeString</MudText>
                 </MudPaper>
             </MudItem>
             <MudItem xs="12" sm="6" md="3">
