Unified Form styling

--- a/src/Gradebook/Gradebook.Web/Components/Pages/Account/Profile.razor
+++ b/src/Gradebook/Gradebook.Web/Components/Pages/Account/Profile.razor
@@ -4,7 +4,7 @@
 @inherits ExtendedComponentBase
 @inject UserStateContainer userStateContainer
 
-<MudPaper Elevation="2" Class="p-4 mx-auto mt-6" Style="max-width: 50rem;padding:1rem;">
+<MudPaper Elevation="2" Class="form-paper">
     <MudStack Spacing="2">
         <!-- Profile Header -->
         <MudStack Direction="Row" AlignItems="AlignItems.Center" Spacing="2">
