--- a/src/Gradebook/Gradebook.Web/Components/Pages/Administator/ManageTeachers/Form.razor
+++ b/src/Gradebook/Gradebook.Web/Components/Pages/Administator/ManageTeachers/Form.razor
@@ -2,10 +2,10 @@
 
 <PageTitle>@PageTitle</PageTitle>
 
-<MudPaper Class="pa-4">
+<MudPaper Class="form-paper">
     <MudText Typo="Typo.h5" Class="mb-4">@PageTitle</MudText>
 
-    <MudForm @ref="FormRef">
+    <MudForm @ref="FormRef" Class="custom-form">
 
         @if (IsCreate)
         {
