--- a/src/Gradebook/Gradebook.Web/Components/Pages/Administator/ManageTimetables/CreateTimetable.razor
+++ b/src/Gradebook/Gradebook.Web/Components/Pages/Administator/ManageTimetables/CreateTimetable.razor
@@ -3,10 +3,10 @@
 
 <PageTitle>Create Timetable</PageTitle>
 
-<MudPaper Class="pa-4 mx-auto mt-6" Style="max-width:600px">
+<MudPaper Class="form-paper">
     <MudText Typo="Typo.h5" Class="mb-4">Create Timetable Entry</MudText>
 
-    <MudForm @ref="_form">
+    <MudForm @ref="_form" Class="custom-form">
 
         <!-- School Year -->
         <MudSelect T="Guid"
