--- a/src/Gradebook/Gradebook.Web/Components/Pages/Administator/ManageTeachers/Form.razor
+++ b/src/Gradebook/Gradebook.Web/Components/Pages/Administator/ManageTeachers/Form.razor
@@ -7,21 +7,23 @@
 
     <MudForm @ref="FormRef" Class="custom-form">
 
+        <!-- Tabs -->
         @if (IsCreate)
         {
             <MudToggleGroup Value="SelectedCreationType"
                             ValueChanged="@SelectedCreationTypeChanged"
-                            T="string"
+                            T="UserCreationType"
                             CheckMark="false"
                             Size="Size.Medium">
-                @foreach (string creationType in CreationTypes)
+                @foreach (UserCreationType creationType in Enum.GetValues(typeof(UserCreationType)))
                 {
-                    <MudToggleItem Value="@creationType" />
+                    <MudToggleItem Text="@creationType.GetEnumDisplayName()" Value="@creationType" />
                 }
             </MudToggleGroup>
         }
 
-        @if (SelectedCreationType == CreationTypes[0])
+        <!-- Existing User Select -->
+        @if (SelectedCreationType == UserCreationType.Existing)
         {
             @if (IsCreate)
             {
@@ -69,9 +71,13 @@
             <UserForm @bind-ViewModel="ViewModel.User" />
         }
 
+        <!-- Business Email -->
         <MudTextField @bind-Value="ViewModel.Role.BusinessEmail" For="@(() => ViewModel.Role.BusinessEmail)" Label="Business Email" />
+
+        <!-- Business Phone Number -->
         <MudTextField @bind-Value="ViewModel.Role.BusinessPhoneNumber" For="@(() => ViewModel.Role.BusinessPhoneNumber)" Label="Business Phone Number" />
 
+        <!-- School -->
         <MudAutocomplete T="SchoolViewModel"
                          Value="ViewModel.Role.School"
                          ValueChanged="SelectedSchoolChanged"
@@ -99,6 +105,7 @@
             </ItemTemplate>
         </MudAutocomplete>
 
+        <!-- Subject -->
         <MudSelect @bind-SelectedValues="@SelectedSubjects"
                    ToStringFunc="@((args) => (args != null) ? args.Name : "")"
                    Label="Subjects"
@@ -114,6 +121,7 @@
             }
         </MudSelect>
 
+        <!-- Is Active -->
         <MudInputLabel>@("Is Active")</MudInputLabel>
         <MudCheckBox @bind-Value="ViewModel.Role.IsActive" Color="Color.Primary" />
 
