Added Student Form + Editting

--- a/src/Gradebook/Gradebook.Web/Components/Layout/NavMenu.razor
+++ b/src/Gradebook/Gradebook.Web/Components/Layout/NavMenu.razor
@@ -10,7 +10,7 @@
     <span>
         <MudIcon Size="Size.Large" Icon="@Icons.Material.Filled.CalendarToday" class="mr-3" />
         @*Href varies depending on the role*@
-        <MudNavLink Match="NavLinkMatch.Prefix" ActiveClass="bold" Href="calendar">Timetable</MudNavLink>
+        <MudNavLink Match="NavLinkMatch.Prefix" ActiveClass="bold" Href="/timetable">Timetable</MudNavLink>
     </span>
     <span>
         <MudIcon Size="Size.Large" Icon="@Icons.Material.Filled.Grade" class="mr-3" />
