Added Student creation & fixed Adding Users

--- a/src/Gradebook/Gradebook.Web/Components/Pages/Administator/ManageStudents/CreateStudent.razor
+++ b/src/Gradebook/Gradebook.Web/Components/Pages/Administator/ManageStudents/CreateStudent.razor
@@ -1,6 +1,6 @@
 ﻿@page "/manage-students/create"
 @inherits ExtendedComponentBase
 
-@* <Form ViewModel="@ViewModel"
+<Form ViewModel="@ViewModel"
       PageTitle="Create Student"
-      OnValidSubmit="ValidSubmitHandler" /> *@
+      OnValidSubmit="ValidSubmitHandler" />
