--- a/src/Gradebook/Gradebook.Web/Components/Pages/Administator/ManageParents/EditParent.razor
+++ b/src/Gradebook/Gradebook.Web/Components/Pages/Administator/ManageParents/EditParent.razor
@@ -3,7 +3,8 @@
 
 @if (IsLoadingComplete)
 {
-        <Form ViewModel="@ViewModel"
+    <Form ViewModel="@ViewModel"
+          IsCreate="false"
           PageTitle="Edit Student"
           OnValidSubmit="ValidSubmitHandler" />
 }
