--- a/src/Gradebook/Gradebook.Web/Components/Shared/AbsenceDialogForm.razor
+++ b/src/Gradebook/Gradebook.Web/Components/Shared/AbsenceDialogForm.razor
@@ -8,6 +8,9 @@
         <MudForm @ref="FormRef" Class="custom-form">
             @* Form Items Here *@
         </MudForm>
+        <div style="width: 800px; height: 300px;">
+            Content here
+        </div>
     </DialogContent>
     <DialogActions>
         <MudButton OnClick="@SubmitHandler" ButtonType="ButtonType.Button" Variant="Variant.Filled" Color="Color.Primary" Class="mt-4">
