Added Creating/Editing Parents

--- a/src/Gradebook/Gradebook.Web/Components/Pages/Administator/ManageParents/CreateParent.razor
+++ b/src/Gradebook/Gradebook.Web/Components/Pages/Administator/ManageParents/CreateParent.razor
@@ -1,6 +1,7 @@
 ﻿@page "/manage-parents/create"
 @inherits ExtendedComponentBase
 
-@* <Form ViewModel="@ViewModel"
+<Form ViewModel="@ViewModel"
       PageTitle="Create Parent"
-      OnValidSubmit="ValidSubmitHandler" /> *@
+      IsCreate="true"
+      OnValidSubmit="ValidSubmitHandler" />
