--- a/src/Gradebook/Gradebook.Web/Components/Pages/Administator/ManageParents/EditParent.razor
+++ b/src/Gradebook/Gradebook.Web/Components/Pages/Administator/ManageParents/EditParent.razor
@@ -5,6 +5,6 @@
 {
     <Form ViewModel="@ViewModel"
           IsCreate="false"
-          PageTitle="Edit Student"
+          PageTitle="Edit Parent"
           OnValidSubmit="ValidSubmitHandler" />
 }
